--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,44 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
+
+  <meta name="author" content="Rodrigo Ribeiro - me@rodrigo3d.com">
+  <meta name="keywords" content="react,reactjs,react component,component,select,form,autocomplete,control,ui,javascript">
+  <meta name="description" content="Um App Web para você gerenciar as séries que você acompanha. Chega de ficar perdido com os lançamentos da Netflix! hehehe.">
+
+  <meta property="og:locale" content="en-us">
+  <meta property="og:title" content="Minhas Séries">
+  <meta property="og:description" content="Um App Web para você gerenciar as séries que você acompanha. Chega de ficar perdido com os lançamentos da Netflix! hehehe.">
+  <meta property="og:url" content="https://rodrigo3d.github.io/minhas-series">
+  <meta property="og:site_name" content="Minhas Séries">
+  <meta property="og:type" content="">
+
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
+   -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
+                                                               It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
   <title>React App Starter</title>
-
-
-
   <!-- Bootstrap core CSS -->
-  <link href="%PUBLIC_URL%/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="%PUBLIC_URL%/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="%PUBLIC_URL%/album.css--" rel="stylesheet">
-  <link href="%PUBLIC_URL%/carousel.css--" rel="stylesheet">
-</head>
+  <link href="%PUBLIC_URL%/assets/css/album.css-" rel="stylesheet">
+  <link href="%PUBLIC_URL%/assets/css/carousel.css" rel="stylesheet">
 </head>
 
-<body>
+<body id="home-body">
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
@@ -56,8 +65,10 @@
     crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="%PUBLIC_URL%/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
   <script src="%PUBLIC_URL%/assets/js/vendor/popper.min.js"></script>
-  <script src="%PUBLIC_URL%/dist/js/bootstrap.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
   <script src="%PUBLIC_URL%/assets/js/vendor/holder.min.js"></script>
+
 </body>
 
 </html>
